# weather-api

./: .gitignore  LICENSE  README.md  dump.rdb  pyproject.toml  requirements.txt  run.sh  weather.json
.github/workflows/: ci.yaml
src/: api.py  config.py  forms.py  main.py  operations.py  weather_cache.py
static/css/: style.css
templates/: base.html  index.html  results.html
tests/: conftest.py  test_api.py  test_weather_cache.py
