[build-system]
requires = ["setuptools"] 
build-backend = "setuptools.build_meta" 


[project]
name = "weather-api"  
version = "0.0.0"  
description = "An application that fetches and returns weather data from a 3rd party API."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE.txt"}
keywords = ["python", "web_app", "api"]
authors = [
  {name = "Morgan Sell", email = "morganpsell@gmail.com" }
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]


[tool.pytest.ini_options]
testpaths = ["."]
addopts = "--cov=src --cov-report=term-missing"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["src/main.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 88 # match black's line length
fix = false # black handles it
exclude = ["tests/"]

[tool.ruff.lint]
# E: Enforces pycodestyle error codes (like PEP 8).
# F: Runs pyflakes for identifying unused imports and variables.
# B: Runs flake8-bugbear for finding potential bugs.
# W: Warnings for pycodestyle
select = ["E", "F", "W", "B"] 
# E501: ignore line length (handled by black)
ignore = ["E501"] 

[tool.black]
line-length = 88 # Standard PEP8 line length
target-version = ["py311"]
skip-string-normalization = false # If true, black won't normalize quotes

[tool.isort]
profile = "black" # Use black's import sorting style
line_length = 88
known_third_party = ["pytest"]